RESOLVED FIXED141547
determinePrimarySnapshottedPlugIn() should only traverse visible Frames
https://bugs.webkit.org/show_bug.cgi?id=141547
Summary determinePrimarySnapshottedPlugIn() should only traverse visible Frames
Simon Fraser (smfr)
Reported 2015-02-12 18:18:39 PST
determinePrimarySnapshottedPlugIn() should only traverse visible Frames
Attachments
Patch (8.03 KB, patch)
2015-02-12 18:23 PST, Simon Fraser (smfr)
no flags
Patch (8.58 KB, patch)
2015-02-12 21:39 PST, Simon Fraser (smfr)
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2015-02-12 18:23:15 PST
Anders Carlsson
Comment 2 2015-02-12 18:35:04 PST
Comment on attachment 246497 [details] Patch Test case?
Simon Fraser (smfr)
Comment 3 2015-02-12 21:39:08 PST
Simon Fraser (smfr)
Comment 4 2015-02-13 11:04:44 PST
https://trac.webkit.org/r180062 Anders reviewed this.
mitz
Comment 5 2015-02-13 11:13:01 PST
A better title for this bug might be “Crashes under RenderLayer::hitTestLayer under determinePrimarySnapshottedPlugIn()”.
mitz
Comment 6 2015-02-13 11:13:30 PST
(In reply to comment #5) > A better title for this bug might be “Crashes under > RenderLayer::hitTestLayer under determinePrimarySnapshottedPlugIn()”. Whoops, that’s a different bug. Never mind!
Note You need to log in before you can comment on or make changes to this bug.